# crispii_colours

./: Cargo.toml  README.md
src/: colour.rs  lib.rs  palette.rs
src/colour/: channel_intensity.rs  colour_channel_intensity.rs  opacity_channel_intensity.rs
