[package]
name = "crispii_colours"
version = "0.2.0"
edition = "2024"
description = "Colour types intended for use with Crispii"
authors = ["Stephen Paton <69050696+stephen-paton@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
keywords = ["crispii", "colours"]

[dependencies]
crispii_errors = "0.1.1"
